[project]
name = "grok2api"
version = "1.5.1"
description = "Grok2API rebuilt with FastAPI, fully aligned with the latest web call format. Supports streaming and non-streaming chat, image generation/editing, deep thinking, token pool concurrency, and automatic load balancing."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3; platform_system != 'Emscripten'",
    "aiohttp-socks>=0.11.0; platform_system != 'Emscripten'",
    "aiomysql>=0.2.0; platform_system != 'Emscripten'",
    "asyncpg>=0.31.0; platform_system != 'Emscripten'",
    "cryptography>=46.0.5; platform_system != 'Emscripten'",
    "curl-cffi>=0.13.0; platform_system != 'Emscripten'",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "greenlet>=3.3.1; platform_system != 'Emscripten'",
    "livekit>=1.0.25; platform_system != 'Emscripten'",
    "loguru>=0.7.3",
    "orjson>=3.11.4; platform_system != 'Emscripten'",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.21",
    "redis>=6.4.0; platform_system != 'Emscripten'",
    "sqlalchemy>=2.0.46; platform_system != 'Emscripten'",
    "uvicorn>=0.37.0; platform_system != 'Emscripten'",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
    "ruff>=0.15.0",
]
